# HACKCC-snakes-

./: backend.py  cppcurltest.cpp
ProjectHack/gameFile/: .main.cpp.swp  BackgroundManager.h  Enemy.h  gamePro  main.cpp  makefile
game/gameFile/: Animation.h  CMakeLists.txt  gamePro  main.cpp
website/: login-signup-styles.css  login.html  signup.html  validation.js
